--- a/BlogTemplate/Lao_MomBlog.csproj
+++ b/BlogTemplate/Lao_MomBlog.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>aspnet-BlogTemplate-42899553-8CF4-4C54-9A35-69ADC51F0DA0</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.13.3" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" PrivateAssets="All" />
+    <PackageReference Include="Markdig" Version="0.15.5" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
@@ -18,6 +19,7 @@
     <Folder Include="BlogFiles\" />
     <Folder Include="BlogFiles\Drafts\" />
     <Folder Include="BlogFiles\Posts\" />
+    <Folder Include="Pages\New SQL Stuff\" />
     <Folder Include="wwwroot\Uploads\" />
   </ItemGroup>
 </Project>
